# Optimalisering2026

./: .gitignore  .pre-commit-config.yaml  FloodOpt – Open Source Platform voor Optimalisatie van Dijkversterking en Rivierverruiming.docx  README.md  conftest.py  development_log.md  docker-compose.yml  requirements.txt  start.bat
2013_12_11 Versie 2.3.2 OptimaliseRing/Broncode/: OptimaliseRing.sln
floodopt-api/: pyproject.toml
floodopt-api/floodopt_api/: celery_app.py  database.py  main.py  models.py  repositories.py  store.py  validation.py
floodopt-core/: pyproject.toml
floodopt-core/floodopt_core/io/: __init__.py  cost_function.py  models.py
floodopt-core/floodopt_core/optimization/: __init__.py  brute_force.py  continuous_optimizer.py  protocols.py  pyomo_optimizer.py
floodopt-core/floodopt_core/physics/: __init__.py  p_series.py  protocols.py  simple_dike_overflow.py
floodopt-core/floodopt_core/risk/: __init__.py  protocols.py  simple_risk_calculator.py
floodopt-frontend/: index.html  package-lock.json  package.json
floodopt-frontend/src/: App.tsx
floodopt-frontend/src/api/: client.ts
floodopt-worker/: pyproject.toml
floodopt-worker/floodopt_worker/: tasks.py
scripts/: convert_dijkringdelen.py  convert_mdb_to_sqlite.py  generate_docs.py  init_db.py  run_smoke_test.py
tests/integration/: test_api.py  test_cli_smoke.py  test_database.py  test_worker.py
tests/unit/: test_io_models.py  test_optimization.py  test_physics_simple_dike_overflow.py  test_risk_simple_risk_calculator.py
tests/validation/: dijkringdelen.geojson  optimalise_ring_2011.sqlite
(+291 files in other folders)
