[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "floodopt-api"
version = "0.0.1"
description = "FloodOpt FastAPI backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "floodopt-core",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27",
    "pytest>=8.0",
]
