[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "floodopt-core"
version = "0.0.1"
description = "FloodOpt rekenkernel — Physics, Risk en Optimization lagen"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pyomo.*", "highspy.*"]
ignore_missing_imports = true
ignore_errors = true
