[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "floodopt-worker"
version = "0.0.1"
description = "FloodOpt Celery worker — async optimalisatietaken"
requires-python = ">=3.11"
dependencies = [
    "celery[redis]>=5.3",
    "floodopt-api",
    "floodopt-core",
]
